<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    android:layout_margin="15dp"

    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="About The App"
                android:textColor="#000000"
                android:textSize="20sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:background="#3b5998"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/about_app"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="About Us"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:background="#3b5998"
                android:gravity="center|fill_horizontal|center_vertical"
                android:text="@string/about_us"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Contact Us"
                android:textColor="#000000"
                android:textSize="25sp"

                android:layout_marginBottom="20dp"/>

<!--            <de.hdodenhof.circleimageview.CircleImageView-->
<!--                xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--                android:id="@+id/armyChief"-->
<!--                android:layout_width="300dp"-->
<!--                android:layout_height="300dp"-->
<!--                android:src="@drawable/head"-->
<!--                app:civ_border_width="2dp"-->
<!--                app:civ_border_color="#FF000000"/>-->

<!--            <TextView-->
<!--                android:layout_margin="10dp"-->
<!--                android:padding="10dp"-->
<!--                android:textColor="#070707"-->
<!--                android:textSize="15sp"-->
<!--                android:textAlignment="center"-->
<!--                android:layout_width="400dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/head"-->
<!--                android:gravity="center_horizontal" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_marginLeft="20dp"-->
<!--                android:layout_marginRight="20dp"-->
<!--                android:background="#FDFFFF"-->
<!--                android:gravity="center_horizontal"-->
<!--                android:text="@string/about_us_header"-->
<!--                android:textAlignment="center"-->
<!--                android:textColor="#000000"-->
<!--                android:textSize="30dp" />-->

<!--            <TextView-->
<!--                android:layout_marginBottom="20dp"-->
<!--                android:textAlignment="center"-->
<!--                android:textColor="#FFFFFF"-->
<!--                android:textSize="20sp"-->
<!--                android:background="#1E4E73"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:text="@string/head_details"-->
<!--                android:gravity="center_horizontal" />-->

<!--&lt;!&ndash;            //*********head completed*****////////////////&ndash;&gt;-->


<!--            <de.hdodenhof.circleimageview.CircleImageView-->
<!--                xmlns:app="http://schemas.android.com/apk/res-auto"-->

<!--                android:layout_width="300dp"-->
<!--                android:layout_height="300dp"-->
<!--                android:src="@drawable/nazrul_sir"-->
<!--                app:civ_border_width="2dp"-->
<!--                app:civ_border_color="#FF000000"/>-->
<!--            <TextView-->
<!--                android:layout_margin="10dp"-->
<!--                android:padding="10dp"-->
<!--                android:textColor="#070707"-->
<!--                android:textSize="15sp"-->
<!--                android:textAlignment="center"-->

<!--                android:layout_width="400dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/nazrul_sir"-->
<!--                android:gravity="center_horizontal" />-->
<!--            <TextView-->
<!--                android:layout_marginLeft="20dp"-->
<!--                android:layout_marginRight="20dp"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:textSize="30dp"-->
<!--                android:text="@string/about_us_header"-->
<!--                android:textColor="#000000"-->
<!--                android:textAlignment="center"-->
<!--                android:gravity="center_horizontal" />-->

<!--            <TextView-->
<!--                android:layout_marginBottom="20dp"-->
<!--                android:textAlignment="center"-->
<!--                android:textColor="#FFFFFF"-->
<!--                android:textSize="20sp"-->
<!--                android:background="#3b5998"-->

<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->

<!--                android:text="@string/nazrul_sir_details"-->
<!--                android:gravity="center_horizontal" />-->

<!--&lt;!&ndash;            //***********nazrul sir completed*******///////////////&ndash;&gt;-->

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"

                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/nafiz_vai"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>
            <TextView
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="#070707"
                android:textSize="15sp"
                android:textAlignment="center"

                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:text="@string/nafiz_vai"
                android:gravity="center_horizontal" />
            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="30dp"

                android:text="@string/about_us_header"
                android:textColor="#000000"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:background="#3b5998"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:text="@string/nafiz_vai_details"
                android:gravity="center_horizontal" />

<!--            ///////**********nafiz vai completed*********///////-->

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/nafiz"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>
            <TextView
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="#070707"
                android:textSize="15sp"
                android:textAlignment="center"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:text="@string/nafiz"
                android:gravity="center_horizontal" />
            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="30dp"
                android:text="@string/about_us_header"
                android:textColor="#000000"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:background="#3b5998"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nafiz_details"
                android:gravity="center_horizontal" />

<!--            ///******nafiz completed***********////////////-->

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/adeeb5"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>
            <TextView
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="#070707"
                android:textSize="15sp"
                android:textAlignment="center"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:text="@string/adeeb"
                android:gravity="center_horizontal" />
            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="30dp"
                android:text="@string/about_us_header"
                android:textColor="#000000"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:background="#3b5998"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/adeeb_details"
                android:gravity="center_horizontal" />

<!--            //*********adeeb completed********/////////-->


        </LinearLayout>


    </ScrollView>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:background="#F8FAFA"
        android:layout_height="match_parent"
        android:id="@+id/navigationView"
        layout_gravity="start"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_layout"
        />

</android.support.v4.widget.DrawerLayout>